# graph-translate

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.yaml  run_experiment.py  wandbconfig.yaml
src/data/: README.md  __init__.py  lit_datamodule.py  process.py  pyg_datasets.py  transforms.py
src/models/: __init__.py  gnn.py  lit_model.py  utils.py
training/: README.md  config.yaml  run_experiment.py
translation_classifier/data/: README.md  __init__.py  lit_datamodule.py  pyg_datasets.py
translation_classifier/models/: README.md  __init__.py  gnn.py  lit_model.py
