[project]
name = "graph-translate"
version = "0.1.0"
authors = [
    {name = "Wellcome Machine Learning Team", email = "MachineLearningEngineers@wellcome.org"}
]
description = "Predicting translation of biomedical publications using a GNN approach."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "awswrangler>=3.11.0",
    "imblearn>=0.0",
    "jsonargparse[signatures]>=4.40.0",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "pyg-lib>=0.4.0",
    "ruff>=0.11.11",
    "torch==2.6.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "torchmetrics>=1.7.1",
    "wandb>=0.19.11",
]

[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.6.0+cpu.html",
    "https://data.pyg.org/whl/torch-2.6.0+cu124.html"
    ]
